--- a/notebooks/day1_big_picture_intro.ipynb
+++ b/notebooks/day1_big_picture_intro.ipynb
@@ -395,6 +395,7 @@
         "\n",
         "- **Links & Images**  \n",
         "  [Example link](https://example.com) → `[Example link](https://example.com)`  \n",
+        "  \n",
         "  ![Alt text](https://www.rtu.lv/images/logo_lv.svg?v=1.1) → `![Alt text](url)`\n",
         "\n",
         "  <img src=\"https://www.riga.lv/sites/riga/files/rd_logo_riga.lv_05-2015.png\" alt=\"Image description\" width=\"600\">\n",
@@ -510,43 +511,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4NZHtla7QpSM",
-        "outputId": "fad443c1-e260-4f52-f7d4-aae2bae911de"
+        "outputId": "efd908fd-4609-43ba-e021-cb04b05c6ff4"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Hello Python! My First Code cell\n"
+            "Hello Python! My First Code cell Man pirmā koda rindiņa \n"
           ]
         }
       ],
       "source": [
-        "print(\"Hello Python! My First Code cell\")"
+        "print(\"Hello Python! My First Code cell Man pirmā koda rindiņa \")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-wXMZWDBu0PS",
-        "outputId": "310199de-1bfe-4e71-96bd-4daad0c93ee6"
+        "outputId": "a526fff8-fd30-43dc-bd52-4d62e2b946d9"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Hello Valdis Saulespurēns ☉! Welcome to 2025.\n"
+            "Hello Valdis Saulespurēns 🏀! Welcome to year: 2025.\n"
           ]
         }
       ],
@@ -554,7 +555,7 @@
         "# A simple Python example\n",
         "# hash means this is a comment - computer ignores it\n",
         "# use comments to explain your code - WHY you did something, not just WHAT you did\n",
-        "name = \"Valdis Saulespurēns ☉\" # we supply data to the variable name\n",
+        "name = \"Valdis Saulespurēns 🏀\" # we supply data to the variable name\n",
         "# Python is case-sensitive, so 'name' and 'Name' are different variables\n",
         "# typically normal variables use lowercase\n",
         "# also we use so called snake case for longer variables my_long_variable\n",
@@ -564,7 +565,7 @@
         "\n",
         "year = 2025 # we supply data to the variable year\n",
         "# variables are like boxes that hold data\n",
-        "message = f\"Hello {name}! Welcome to {year}.\" # f-string allows us to insert variables into strings\n",
+        "message = f\"Hello {name}! Welcome to year: {year}.\" # f-string allows us to insert variables into strings\n",
         "# f-string starts with 'f' and allows us to use curly braces {} to insert variables\n",
         "print(message) # print() outputs the message to the console"
       ]
@@ -591,18 +592,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SRnNd664Jiom",
-        "outputId": "32675cce-b296-449c-f83c-70a3e3a1409a"
+        "outputId": "95586615-a340-483e-d6b7-826a3821b5ff"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Hello, my name is {my_name}\n",
             "Hello, my name is Valdis\n"
@@ -611,24 +612,24 @@
       ],
       "source": [
         "my_name = \"Valdis\" # I assign variable my_name value (point it to) string \"Valdis\"\n",
-        "print(\"Hello, my name is {my_name}\")\n",
-        "print(f\"Hello, my name is {my_name}\")\n"
+        "print(\"Hello, my name is {my_name}\") # here {my_name} is just part of string\n",
+        "print(f\"Hello, my name is {my_name}\") # here we put f in front of our string created\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KAMky2IGUDFE",
-        "outputId": "a71028bf-f27d-4aef-f1ba-59377c3ad7c5"
+        "outputId": "a344ab4a-760d-4c76-820a-432dfb870c70"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "ooops\n"
           ]
@@ -704,18 +705,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vTHfoB-Vu0Pe",
-        "outputId": "1198c17e-2dc6-4b08-a7eb-457ce5a917b9"
+        "outputId": "d2a65c17-e2c7-462b-da3b-08b3c32d67c8"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "42 3.14 Hello, World! True None\n"
           ]
@@ -734,48 +735,77 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wN1BSTSHV1q5",
-        "outputId": "eaed4940-b156-4e6c-a43c-2741e96db84c"
+        "outputId": "8b00dc9c-8afd-4502-fa9c-2a2ffb30fd02"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "30"
             ]
           },
-          "execution_count": 6,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 14
         }
       ],
       "source": [
+        "5+2 # this row will not show because it is not last and we did  not print it\n",
         "10+20 # I do not need to write print for last row of a cell it will be output below"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "(2+5)*(100-90) # should show 70 below # so normal arithmetic rules apply"
+      ],
+      "metadata": {
+        "id": "m54xRzI-g0No",
+        "outputId": "4bdaf39e-da32-4dec-984b-603ff521584c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "70"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "H7aUyH7AWDUv",
-        "outputId": "89f51ec8-6687-41ee-c35f-55dfa9fadaa4"
+        "outputId": "6b53193c-ca86-4c3e-c448-b74a5b503635"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "6\n",
             "-40\n",
             "50.0\n",
+            "2\n",
+            "6\n",
             "10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000\n"
           ]
         }
@@ -784,8 +814,12 @@
         "#If i have many rows that I want to output from same cell then I need to use print for output\n",
         "print(2*3) # multiply\n",
         "print(10-50)\n",
-        "print(100/2)\n",
-        "print(10**100) # ** means power so 10 to the power of 100"
+        "print(100/2) # note division gives you float from integers (and floats of course)\n",
+        "print(20//7) # will give you 2 because // gives you integer (whole part)\n",
+        "# for reminder (modulo actually) we use %\n",
+        "print(20%7) # we get 6 because 20 divided by 7 we get 2 and reminder 6\n",
+        "print(10**100) # ** means power so 10 to the power of 100\n",
+        "# sooo Python has built in BIGNUM support, so any size numbers will work"
       ]
     },
     {
@@ -804,24 +838,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7l4OynApXfTd",
-        "outputId": "6b6b74c2-4a66-44b2-f2e2-39ddd72c947b"
+        "outputId": "3f849ee5-a94f-4021-aad2-dcde83ad8e95"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "int"
             ]
           },
-          "execution_count": 8,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 19
         }
       ],
       "source": [
@@ -842,20 +876,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pxnir_Umu0Pn",
-        "outputId": "2ade8334-1043-4b3f-8cb7-b4f5546a17b5"
+        "outputId": "b0d29559-00f1-4da4-eeb9-6f8d028b44e9"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Hello Valdis Saulespurēns ☉! Welcome to year 2000.\n"
+            "Hello Valdis Saulespurēns 🏀! Welcome to year 2000.\n"
           ]
         }
       ],
@@ -868,27 +902,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NsZC-3vGu0Pr",
-        "outputId": "1af61644-4a22-436b-9be5-3f1c9c849083"
+        "outputId": "f8729c5d-357d-435b-84f3-6c5ae944ca2f"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Next year will be 2100.\n"
+            "Next year will be 2300.\n"
           ]
         }
       ],
       "source": [
         "# now let us add one year to the year variable\n",
-        "year += 100 # this is a shorthand for year = year + 1\n",
-        "# we can also use year = year + 1, but += is shorter and more readable\n",
+        "year += 100 # this is a shorthand for year = year + 100\n",
+        "# similar shortcuts exist for -=, *=, /= for other arithmetic\n",
+        "# we can also use year = year + 100, but += is shorter and more readable\n",
         "print(f\"Next year will be {year}.\") # print the next year\n",
         "# note how if we run the cell again, the year will be 2001, then 2002, etc."
       ]
@@ -915,7 +950,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "id": "jKJ3WSlaZVCm"
       },
@@ -926,20 +961,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZVeOfYIsZazU",
-        "outputId": "cce68511-cedc-4ec0-9d07-2edec907d7dd"
+        "outputId": "889f8dcd-1c30-4777-cd63-5fe303a37422"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "5200\n"
+            "5600\n"
           ]
         }
       ],
@@ -3201,7 +3236,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "venv",
