--- a/notebooks/day1_big_picture_intro.ipynb
+++ b/notebooks/day1_big_picture_intro.ipynb
@@ -416,41 +416,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8aEPhxtLu0PM"
-      },
-      "source": [
-        "---\n",
-        "\n",
-        "## 📦 **Mini Task: Markdown Practice**\n",
-        "\n",
-        "Create a **bulleted list** of 3 of your favorite websites in a **new** Markdown cell.\n",
-        "Each list item should be a **clickable link**.\n",
-        "\n",
-        "👉 Example format (replace with your own sites):\n",
-        "\n",
-        "- [Riga Technical University](https://www.rtu.lv)  \n",
-        "- [Python Official](https://www.python.org)  \n",
-        "- [Pandas Documentation](https://pandas.pydata.org/docs/)\n",
-        "\n",
-        "Extra challenges:\n",
-        "- Add a **heading** for your list (e.g., \"My Favorite Websites\")\n",
-        "- Add an image related to one of the websites\n",
-        "- Use **bold** or *italic* formatting for emphasis\n",
-        "---\n",
-        "\n",
-        "Note if you want an easy way to save your notebook, I recommend making a copy of the notebook in your Google Drive, and then you can download it from there as an `.ipynb` file or as a PDF.\n",
-        "You can also use the \"File\" menu in Google Colab to download the notebook as an `.ipynb` file or as a PDF.\n",
-        "\n",
-        "To make a copy of the notebook in your Google Drive, click on \"File\" → \"Save a copy in Drive\".\n",
-        "Then you will have your own editable copy of the notebook in your Google Drive, which you can then download or share as needed.\n",
-        "Theoretically it should be automatically saved in your Google Drive, but I recommend checking that it is there, just in case.\n",
-        "To force a save afterwards you can also click on \"File\" → \"Save\" or use the keyboard shortcut `Ctrl + S` (or `Cmd + S` on Mac).\n",
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "cscZy3EDN36S"
       },
       "source": [
@@ -511,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -534,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -571,28 +536,8 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wizBKJfYu0PY"
-      },
-      "source": [
-        "---\n",
-        "\n",
-        "## 📦 **Mini Task: Your First Variable**\n",
-        "\n",
-        "1. Create a variable with your **first name** as a string.  \n",
-        "2. Print a greeting that includes your name using an **f-string**.  \n",
-        "\n",
-        "👉 Example (replace with your own name):\n",
-        "\n",
-        "```python\n",
-        "my_name = \"Anna\"\n",
-        "print(f\"Hello, my name is {my_name}\")\n"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -618,7 +563,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -705,7 +650,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -735,7 +680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -772,7 +717,7 @@
         "id": "m54xRzI-g0No",
         "outputId": "4bdaf39e-da32-4dec-984b-603ff521584c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -788,7 +733,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -838,7 +783,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -876,7 +821,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -902,7 +847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -949,39 +894,135 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 33,
+      "cell_type": "markdown",
       "metadata": {
-        "id": "jKJ3WSlaZVCm"
+        "id": "8aEPhxtLu0PM"
       },
-      "outputs": [],
       "source": [
-        "funds = 5000"
+        "---\n",
+        "\n",
+        "## 📦 **Mini Task: Markdown Practice**\n",
+        "\n",
+        "Create a **bulleted list** of 3 of your favorite websites in a **new** Markdown cell.\n",
+        "Each list item should be a **clickable link**.\n",
+        "\n",
+        "👉 Example format (replace with your own sites):\n",
+        "\n",
+        "- [Riga Technical University](https://www.rtu.lv)  \n",
+        "- [Python Official](https://www.python.org)  \n",
+        "- [Pandas Documentation](https://pandas.pydata.org/docs/)\n",
+        "\n",
+        "Extra challenges:\n",
+        "- Add a **heading** for your list (e.g., \"My Favorite Websites\")\n",
+        "- Add an image related to one of the websites\n",
+        "- Use **bold** or *italic* formatting for emphasis\n",
+        "---\n",
+        "\n",
+        "Note if you want an easy way to save your notebook, I recommend making a copy of the notebook in your Google Drive, and then you can download it from there as an `.ipynb` file or as a PDF.\n",
+        "You can also use the \"File\" menu in Google Colab to download the notebook as an `.ipynb` file or as a PDF.\n",
+        "\n",
+        "To make a copy of the notebook in your Google Drive, click on \"File\" → \"Save a copy in Drive\".\n",
+        "Then you will have your own editable copy of the notebook in your Google Drive, which you can then download or share as needed.\n",
+        "Theoretically it should be automatically saved in your Google Drive, but I recommend checking that it is there, just in case.\n",
+        "To force a save afterwards you can also click on \"File\" → \"Save\" or use the keyboard shortcut `Ctrl + S` (or `Cmd + S` on Mac).\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wizBKJfYu0PY"
+      },
+      "source": [
+        "---\n",
+        "\n",
+        "## 📦 **Mini Task: Your First Variable**\n",
+        "\n",
+        "1. Create a variable with your **first name** as a string.  \n",
+        "2. Print a greeting that includes your name using an **f-string**.  \n",
+        "\n",
+        "👉 Example (replace with your own name):\n",
+        "\n",
+        "```python\n",
+        "my_name = \"Anna\"\n",
+        "print(f\"Hello, my name is {my_name}\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZVeOfYIsZazU",
-        "outputId": "889f8dcd-1c30-4777-cd63-5fe303a37422"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "5600\n"
-          ]
-        }
-      ],
       "source": [
-        "funds += 200\n",
-        "print(funds)"
-      ]
+        "# start your own code here"
+      ],
+      "metadata": {
+        "id": "vWwUbjusNKH2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "## 📦 **Mini Task: Simple Calculations with Variables**\n",
+        "\n",
+        "1. Create two variables:  \n",
+        "   - `apples` = number of apples you bought (choose any integer)  \n",
+        "   - `price_per_apple` = price of one apple in euros (choose a decimal)  \n",
+        "\n",
+        "2. Calculate the **total cost** and store it in a variable called `total_cost`.\n",
+        "\n",
+        "3. Print a formatted message using an **f-string** that shows how many apples you bought, the price per apple, and the total cost.\n",
+        "\n",
+        "👉 Example (replace numbers with your own):\n",
+        "\n",
+        "```python\n",
+        "apples = 5\n",
+        "price_per_apple = 0.35\n",
+        "total_cost = apples * price_per_apple\n",
+        "print(f\"I bought {apples} apples at {price_per_apple} € each. Total cost = {total_cost} €.\")\n"
+      ],
+      "metadata": {
+        "id": "PB_i9ypbOKN9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# write your own code here"
+      ],
+      "metadata": {
+        "id": "t3duxUXtOrOr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "\n",
+        "## 📦 **Mini Task: Seconds in a Year**\n",
+        "\n",
+        "Calculate how many seconds are in a year.  \n",
+        "Use variable assignments, arithmetic operations, and print the result using an f-string.  \n",
+        "\n",
+        "---\n"
+      ],
+      "metadata": {
+        "id": "36u2D5P5Oomb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# write your own code here"
+      ],
+      "metadata": {
+        "id": "_rQdWVabOTx1"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1136,7 +1177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1179,7 +1220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1208,7 +1249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1239,7 +1280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1280,7 +1321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1677,7 +1718,7 @@
           "height": 313
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2060,7 +2101,7 @@
           "height": 313
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2444,7 +2485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2505,7 +2546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2700,7 +2741,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3063,7 +3104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3392,7 +3433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3421,7 +3462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3541,7 +3582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3891,7 +3932,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3951,7 +3992,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4255,7 +4296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4649,7 +4690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5215,7 +5256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5611,7 +5652,7 @@
           "height": 330
         }
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5975,7 +6016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6385,7 +6426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6710,7 +6751,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -6754,7 +6795,7 @@
           "height": 17
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6897,7 +6938,7 @@
           "height": 330
         }
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7305,7 +7346,7 @@
           "height": 330
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7714,7 +7755,7 @@
           "height": 380
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8052,7 +8093,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8078,7 +8119,7 @@
           "height": 17
         }
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8169,7 +8210,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "venv",
