--- a/notebooks/day2_data_cleaning_preparation.ipynb
+++ b/notebooks/day2_data_cleaning_preparation.ipynb
@@ -569,14 +569,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 57,
       "id": "7c941a28",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7c941a28",
-        "outputId": "be7efe94-b2bd-46f0-b43f-647c36571c60"
+        "outputId": "59157488-6083-4c00-f5b3-2e6b97b8663b"
       },
       "outputs": [
         {
@@ -594,7 +594,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 57
         }
       ],
       "source": [
@@ -2148,11 +2148,11 @@
         "    print(\"Lengths do not match\") # we need to think why thye did not match"
       ],
       "metadata": {
-        "id": "v2pFguFQXNVF",
-        "outputId": "ad007c0b-b20e-4625-9881-cabe9e3bade4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "v2pFguFQXNVF",
+        "outputId": "ad007c0b-b20e-4625-9881-cabe9e3bade4"
       },
       "id": "v2pFguFQXNVF",
       "execution_count": 45,
@@ -2922,11 +2922,11 @@
         "text_files"
       ],
       "metadata": {
-        "id": "LYix6A1JaTGK",
-        "outputId": "6994e803-b02d-458c-f2df-dd47686b0e03",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LYix6A1JaTGK",
+        "outputId": "6994e803-b02d-458c-f2df-dd47686b0e03"
       },
       "id": "LYix6A1JaTGK",
       "execution_count": 51,
@@ -4976,7 +4976,39 @@
         "\n",
         "### Advanced Users\n",
         "\n",
-        "You can start working on extracting column names from the original files. We will do that after break."
+        "Advanced users with some Pandas experience can work on checking for missing values and even try merging or concatenating the dataframes."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- SKELETON (students fill in) ---\n",
+        "EXTRA_URL = 'https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/raw/refs/heads/main/data/latvia_meteo_1925_extra_messy.zip'\n",
+        "DATA_DIR = Path('day_2_exercise')\n",
+        "\n",
+        "# 1) Download & unzip\n",
+        "download_and_unzip(EXTRA_URL, DATA_DIR)"
+      ],
+      "metadata": {
+        "id": "ewwgpB6mdxXL",
+        "outputId": "e37e5bdd-65f2-433e-ed4e-a81167d5618f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "ewwgpB6mdxXL",
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PosixPath('day_2_exercise')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
       ]
     },
     {
